Add Name & birthdate for pasien

--- a/Klinik.Resources/UIMessages.resx
+++ b/Klinik.Resources/UIMessages.resx
@@ -1152,4 +1152,7 @@
   <data name="ListObatPasien" xml:space="preserve">
     <value>List Obat Pasien</value>
   </data>
+  <data name="TanggalPeriksa" xml:space="preserve">
+    <value>Tanggal Periksa</value>
+  </data>
 </root>
