--- a/Klinik.Resources/UIMessages.resx
+++ b/Klinik.Resources/UIMessages.resx
@@ -1146,7 +1146,6 @@
   <data name="Queue" xml:space="preserve">
     <value>Queue</value>
   </data>
-
   <data name="DeliveryOrderDetailList" xml:space="preserve">
     <value>Delivery Order List</value>
   </data>
@@ -1170,7 +1169,7 @@
   </data>
   <data name="ValidationConfirmation" xml:space="preserve">
     <value>Apakah kanan diproses lebih lanjut untuk menjadi</value>
-</data>
+  </data>
   <data name="AntrianPengambilanObat" xml:space="preserve">
     <value>Antrian Pengambilan Obat</value>
   </data>
@@ -1179,6 +1178,20 @@
   </data>
   <data name="TanggalPeriksa" xml:space="preserve">
     <value>Tanggal Periksa</value>
-
+  </data>
+  <data name="ICDInformation1" xml:space="preserve">
+    <value>ICD Information 1</value>
+  </data>
+  <data name="ICDInformation2" xml:space="preserve">
+    <value>ICD Information 2</value>
+  </data>
+  <data name="ICDInformation3" xml:space="preserve">
+    <value>ICD Information 3</value>
+  </data>
+  <data name="MedicalHistory" xml:space="preserve">
+    <value>Medical History</value>
+  </data>
+  <data name="MedicalHistoryWithFamily" xml:space="preserve">
+    <value>All Medical History</value>
   </data>
 </root>
