Complete Surat Sakit

--- a/Klinik.Resources/UIMessages.resx
+++ b/Klinik.Resources/UIMessages.resx
@@ -1299,4 +1299,10 @@
   <data name="SuratIstirahat" xml:space="preserve">
     <value>Surat Izin Sakit</value>
   </data>
+  <data name="Caused" xml:space="preserve">
+    <value>Caused</value>
+  </data>
+  <data name="Condition" xml:space="preserve">
+    <value>Condition</value>
+  </data>
 </root>
