add upload document feature in form examine

--- a/Klinik.Resources/UIMessages.resx
+++ b/Klinik.Resources/UIMessages.resx
@@ -1389,4 +1389,7 @@
   <data name="Birthplace" xml:space="preserve">
     <value>Birthplace</value>
   </data>
+  <data name="Document" xml:space="preserve">
+    <value>Document</value>
+  </data>
 </root>
